<resources>
    <string name="app_name">Farsi to Greek Grammar</string>


    <string name="text_view">بر روی فعل مورد نظر کلیک کنید</string>


    <string name="button2">دارم</string>
    <string name="button3">می خورم</string>
    <string name="button4"> گرامر</string>
    <string name="button5">راه می روم</string>
    <string name="button6">می بینم</string>
    <string name="button7">می شنوم</string>
    <string name="button8">خنده می کنم</string>
    <string name="button9"> خوابم</string>
    <string name="button10">می روم</string>
    <string name="button11">هستم</string>
    <string name="button12">می گیرم</string>
    <string name="button13">گریه می کنم</string>
    <string name="button14">آمدم</string>
    <string name="button15">می نوشم</string>
    <string name="button16">می دوم</string>
    <string name="button17">دیدم</string>
    <string name="button18">رسیدم</string>
    <string name="button19">کلمه های پزشکی</string>
    <string name="button20">ادامه</string>
    <string name="button22">اّلفبای یونانی</string>
    <string name="button23">حروف صدا دار</string>
    <string name="button68">برگشت</string>
    <string name="buttonface">فیسبوک</string>

    <string name="hyperlink">برای اعداد<a href="https://09nt.com/el/arithmi-sta-ellinika">اینجا کلیک کنید</a></string>
    <string name="hyperlink_youtub">در مورد زبانشناسی.  <a href="https://www.youtube.com/channel/UCUMPSxCtEn3OEz_kISUd3fw">اینجا کلیک کنید</a></string>
    <string name="meteora">برای دیدن ویدیو. <a href="https://www.youtube.com/watch?v=4Wx1JkCzYko">اینجا کلیک کنید</a></string>
    <string name="akropolis">برای دیدن ویدیو. <a href="https://www.youtube.com/watch?v=_gPPZxF00v0">اینجا کلیک کنید</a></string>
    <string name="acropolis_museum">برای دیدن ویدیو.<a href="https://www.youtube.com/watch?v=49TsjfebAH0">اینجا کلیک کنی</a></string>
    <string name="monemvasia">برای دیدن ویدیو.<a href="https://www.youtube.com/watch?v=F5QwMO_Xm7s">اینجا کلیک کنی</a></string>
    <string name="rodos">برای دیدن ویدیو.<a href="https://www.youtube.com/watch?v=ugYIBbk0Q58">اینجا کلیک کنید</a></string>
    <string name="Υδρα">برای دیدن ویدیو.<a href="https://www.youtube.com/watch?v=Rr7ejky1qH4">اینجا کلیک کنید</a></string>
    <string name="nafplio">برای دیدن ویدیو.<a href="https://www.youtube.com/watch?v=-30Qita-3Ao">اینجا کلیک کنید</a></string>
    <string name="arachova">برای دیدن ویدیو.<a href="https://www.youtube.com/watch?v=6izcW8tYjBY">اینجا کلیک کنید</a></string>
    <string name="santorini">برای دیدن ویدیو.<a href="https://www.youtube.com/watch?v=pwEhzl9PTKY">اینجا کلیک کنید</a></string>
    <string name="hyperlink_youtub2">آموزش انگلیسی  <a href="https://www.youtube.com/channel/UCvT0IqN-7M0ZCbYO_QstMzg">اینجا کلیک کنید</a></string>
    <string name="hyperlink_book2">100 کلمه و جمله با صدا  <a href="https://www.goethe-verlag.com/book2/FA/FAEL/FAEL003.HTM">اینجا کلیک کنید</a></string>


</resources>