<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="338dp"
        android:layout_height="430dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984">

        <Button
            android:id="@+id/button47"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button17"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button48"
            app:layout_constraintTop_toBottomOf="@+id/button43" />

        <Button
            android:id="@+id/button48"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button18"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button49"
            app:layout_constraintTop_toBottomOf="@+id/button44" />

        <Button
            android:id="@+id/button49"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/dictionary_background"
            android:text="@string/button19"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button50"
            app:layout_constraintTop_toBottomOf="@+id/button45" />

        <Button
            android:id="@+id/button50"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/continue_button_backround"
            android:text="@string/button20"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button46" />

        <Button
            android:id="@+id/button43"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button13"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button44"
            app:layout_constraintTop_toBottomOf="@+id/button39" />

        <Button
            android:id="@+id/button44"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button14"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button45"
            app:layout_constraintTop_toBottomOf="@+id/button40" />

        <Button
            android:id="@+id/button45"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button15"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button46"
            app:layout_constraintTop_toBottomOf="@+id/button41" />

        <Button
            android:id="@+id/button46"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button16"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button42" />

        <Button
            android:id="@+id/button39"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button9"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button40"
            app:layout_constraintTop_toBottomOf="@+id/button35" />

        <Button
            android:id="@+id/button40"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button10"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button41"
            app:layout_constraintTop_toBottomOf="@+id/button36" />

        <Button
            android:id="@+id/button41"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button11"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button42"
            app:layout_constraintTop_toBottomOf="@+id/button37" />

        <Button
            android:id="@+id/button42"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button12"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button38" />

        <Button
            android:id="@+id/button35"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button5"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button36"
            app:layout_constraintTop_toBottomOf="@+id/button31" />

        <Button
            android:id="@+id/button36"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button6"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button37"
            app:layout_constraintTop_toBottomOf="@+id/button32" />

        <Button
            android:id="@+id/button37"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button7"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button38"
            app:layout_constraintTop_toBottomOf="@+id/button33" />

        <Button
            android:id="@+id/button38"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button8"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button34" />

        <Button
            android:id="@+id/button31"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button1"
            android:textColor="#060606"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button32"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button32"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button33"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button33"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_bakground"
            android:text="@string/button3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button34"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button34"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/grammar_background"
            android:text="@string/button4"
            android:textColor="#100F0F"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view"
        android:textColor="#523333"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>